--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -37,8 +37,16 @@ consul_server_1 ansible_host=192.168.1.1 ansible_user=glendmaatita_me
 [consul_client]
 consul_client_1 ansible_host=192.168.1.2 ansible_user=glendmaatita_me
 
-[nomad_lb]
-nomad_lb_1 ansible_host=192.168.1.3 ansible_user=glendmaatita_me
+[nginx_server]
+nginx_server_1 ansible_host=192.168.1.3 ansible_user=glendmaatita_me
+
+[fabio_server:children]
+consul_client
+consul_server
+
+[load_balancer:children]
+nginx_server
+fabio_server
 
 [webservers:vars]
 ansible_ssh_private_key_file=./../../../keys/id_rsa
@@ -47,4 +55,7 @@ ansible_ssh_private_key_file=./../../../keys/id_rsa
 ansible_ssh_private_key_file=id_rsa
 
 [consul:vars]
+ansible_ssh_private_key_file=id_rsa
+
+[nginx_server:vars]
 ansible_ssh_private_key_file=id_rsa
