--- a/ansible/exercise/exercises-roles/roles/fabio/files/fabio.properties
+++ b/ansible/exercise/exercises-roles/roles/fabio/files/fabio.properties
@@ -8,3 +8,8 @@ registry.consul.addr = 127.0.0.1:8500
 proxy.addr = :9999
 proxy.strategy = rr
 ui.addr = :9998
+
+
+# Route configuration
+route add nomad /nomad http://nomad-server:4646
+route add consul /consul http://consul-server:8500
