--- a/ansible/exercise/exercises-roles/roles/fabio/tasks/nginx.yaml
+++ b/ansible/exercise/exercises-roles/roles/fabio/tasks/nginx.yaml
@@ -4,6 +4,16 @@
     src: ./../templates/nginx.conf.j2
     dest: /etc/nginx/conf.d/default.conf
 
+- name: Prepare nginx conf directory
+  file:
+    path: /etc/nginx/includes
+    state: directory
+
+- name: Override proxy conf
+  copy:
+    src: ./../files/proxy.conf
+    dest: /etc/nginx/includes/proxy.conf
+
 - name: Start nginx
   systemd:
     name: nginx
@@ -11,4 +21,7 @@
     enabled: yes
     
 - name: restart nginx service
-  service: name=nginx state=restarted
+  systemd:
+    name: nginx
+    state: restarted
+    enabled: yes
