fix fabio config

--- a/ansible/exercise/exercises-roles/roles/fabio/files/fabio.properties
+++ b/ansible/exercise/exercises-roles/roles/fabio/files/fabio.properties
@@ -2,14 +2,10 @@
 
 # Consul settings
 registry.consul.addr = 127.0.0.1:8500
+registry.consul.tagprefix = urlprefix-
 
 # Routing settings
 # This example assumes services are tagged in Consul with 'urlprefix-'
 proxy.addr = :9999
 proxy.strategy = rr
 ui.addr = :9998
-
-
-# Route configuration
-route add nomad /nomad http://nomad-server:4646
-route add consul /consul http://consul-server:8500
