--- a/ansible/exercise/exercises-roles/roles/fabio/vars/main.yaml
+++ b/ansible/exercise/exercises-roles/roles/fabio/vars/main.yaml
@@ -1,5 +1,5 @@
 ---
 # vars file for fabio
 fabio_version: "1.6.3"
-public_url: ["nomad.onxp.net", "app.nomad.onxp.net"]
+public_url: ["nomad.onxp.net", "app.nomad.onxp.net", "basic.nomad.onxp.net"]
 author_email: glend@onxp.net
