--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -11,11 +11,12 @@ server_1 ansible_host=192.168.0.0.1 ansible_user=ubuntu
 server_1
 
 [swarm_manager]
-server_1
+swarm_manager_1 ansible_host=192.168.2.1 ansible_user=glendmaatita_me
 
 # set workers if your cluster is multi node
 [swarm_worker]
-# server_1
+swarm_worker_1 ansible_host=192.168.2.2 ansible_user=glendmaatita_me
+swarm_worker_1 ansible_host=192.168.2.3 ansible_user=glendmaatita_me
 
 [nomad:children]
 nomad_server
