add swarm config

--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -16,7 +16,11 @@ swarm_manager_1 ansible_host=192.168.2.1 ansible_user=glendmaatita_me
 # set workers if your cluster is multi node
 [swarm_worker]
 swarm_worker_1 ansible_host=192.168.2.2 ansible_user=glendmaatita_me
-swarm_worker_1 ansible_host=192.168.2.3 ansible_user=glendmaatita_me
+swarm_worker_2 ansible_host=192.168.2.3 ansible_user=glendmaatita_me
+
+[swarm:children]
+swarm_manager
+swarm_worker
 
 [nomad:children]
 nomad_server
@@ -59,4 +63,7 @@ ansible_ssh_private_key_file=id_rsa
 ansible_ssh_private_key_file=id_rsa
 
 [nginx_server:vars]
+ansible_ssh_private_key_file=id_rsa
+
+[swarm:vars]
 ansible_ssh_private_key_file=id_rsa
