add rke installation

--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -10,6 +10,17 @@ server_1 ansible_host=192.168.0.0.1 ansible_user=ubuntu
 [ubuntu]
 server_1
 
+[rke_master]
+rke_master_1 ansible_host=192.168.3.1 ansible_user=glendmaatita_me
+
+[rke_worker]
+rke_worker_1 ansible_host=192.168.3.2 ansible_user=glendmaatita_me
+rke_worker_2 ansible_host=192.168.3.3 ansible_user=glendmaatita_me
+
+[rke:children]
+rke_master
+rke_worker
+
 [swarm_manager]
 swarm_manager_1 ansible_host=192.168.2.1 ansible_user=glendmaatita_me
 
@@ -66,4 +77,7 @@ ansible_ssh_private_key_file=id_rsa
 ansible_ssh_private_key_file=id_rsa
 
 [swarm:vars]
+ansible_ssh_private_key_file=id_rsa
+
+[rke:vars]
 ansible_ssh_private_key_file=id_rsa
