--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -29,9 +29,14 @@ swarm_manager_1 ansible_host=192.168.2.1 ansible_user=glendmaatita_me
 swarm_worker_1 ansible_host=192.168.2.2 ansible_user=glendmaatita_me
 swarm_worker_2 ansible_host=192.168.2.3 ansible_user=glendmaatita_me
 
+[swarm_node:children]
+swarm_manager
+swarm_worker
+
 [swarm:children]
 swarm_manager
 swarm_worker
+nginx_server
 
 [nomad:children]
 nomad_server
@@ -53,8 +58,9 @@ consul_server_1 ansible_host=192.168.1.1 ansible_user=glendmaatita_me
 [consul_client]
 consul_client_1 ansible_host=192.168.1.2 ansible_user=glendmaatita_me
 
+; can used by nomad and swarm
 [nginx_server]
-nginx_server_1 ansible_host=192.168.1.3 ansible_user=glendmaatita_me
+nginx_server_1 ansible_host=192.168.2.4 ansible_user=glendmaatita_me
 
 [fabio_server:children]
 consul_client
