--- a/ansible/exercise/exercises-roles/roles/swarm/tasks/nginx.yaml
+++ b/ansible/exercise/exercises-roles/roles/swarm/tasks/nginx.yaml
@@ -9,14 +9,19 @@
     state: started
     enabled: yes
 
+- name: Prepare nginx conf directory
+  file:
+    path: /etc/nginx/includes
+    state: directory
+
 - name: Override proxy conf
   copy:
-    src: ./../files/nginx/includes/proxy.conf
+    src: ./../files/proxy.conf
     dest: "{{ nginx_conf_path }}/proxy.conf"
 
 - name: Override nginx conf
   template:
-    src: ./../files/nginx/default.conf.j2
+    src: nginx.conf.j2
     dest: /etc/nginx/conf.d/default.conf
 
 - name: restart nginx service
