--- a/ansible/exercise/exercises-roles/roles/swarm/tasks/worker.yaml
+++ b/ansible/exercise/exercises-roles/roles/swarm/tasks/worker.yaml
@@ -1,5 +1,13 @@
 ---
 
+# - name: Join Swarm
+#   command: docker swarm join --token {{ hostvars[groups['swarm_manager'][0]]['swarm_manager_join_token'] }} {{ hostvars[groups['swarm_manager'][0]]['swarm_manager_ip'] }}:2377
+
+- name: Check if already part of a swarm
+  command: docker info --format '{{ "{{.Swarm.LocalNodeState}}" }}'
+  register: swarm_status
+  changed_when: false
+
 - name: Join Swarm
   command: docker swarm join --token {{ hostvars[groups['swarm_manager'][0]]['swarm_manager_join_token'] }} {{ hostvars[groups['swarm_manager'][0]]['swarm_manager_ip'] }}:2377
-    
+  when: swarm_status.stdout != "active"
