--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -5,7 +5,7 @@ swarm_manager
 swarm_worker
 
 [webservers]
-server_1 ansible_host=192.168.0.0.1 ansible_user=ubuntu
+server_1 ansible_host=192.168.0.0.1 ansible_user=glendmaatita_me
 
 [ubuntu]
 server_1
