--- a/ansible/exercise/exercises-roles/roles/docker/tasks/certbot.yaml
+++ b/ansible/exercise/exercises-roles/roles/docker/tasks/certbot.yaml
@@ -4,6 +4,6 @@
     name: ['certbot', 'python3-certbot-nginx']
     state: present
 - name: Generate Let's Encrypt certificate
-  command: certbot --nginx -d {{ public_url }} --email {{ author_email }} --agree-tos --no-eff-email
+  command: certbot --nginx -d {{ public_url }} --email {{ author_email }} --agree-tos --no-eff-email --renew-by-default
 - name: restart nginx service
   service: name=nginx state=restarted
