--- a/ansible/exercise/exercises-roles/roles/docker/tasks/nginx.yaml
+++ b/ansible/exercise/exercises-roles/roles/docker/tasks/nginx.yaml
@@ -16,7 +16,7 @@
 
 - name: Override nginx conf
   template:
-    src: ./../files/nginx/default.conf.j2
+    src: nginx/default.conf.j2
     dest: /etc/nginx/conf.d/default.conf
 
 - name: restart nginx service
