--- a/ansible/exercise/playbooks/when.yaml
+++ b/ansible/exercise/playbooks/when.yaml
@@ -9,8 +9,8 @@
         update_cache: yes
         upgrade: dist
       when: ansible_os_family == 'Debian'
-    - name: Upgrade Packages Redhat
+    - name: Upgrade Packages RedHat
       yum:
         name: "*"
         state: latest
-      when: ansible_os_family == 'Redhat'
+      when: ansible_os_family == 'RedHat'
