--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -5,7 +5,17 @@ swarm_manager
 swarm_worker
 
 [webservers]
-server_1 ansible_host=192.168.0.0.1 ansible_user=glendmaatita_me
+server_1 ansible_host=192.168.0.1 ansible_user=glendmaatita_me
+
+[k3s_nodes:children]
+k3s_master
+; k3s_worker
+
+[k3s_master]
+server_1 ansible_host=192.168.4.1 ansible_user=glendmaatita_me
+
+[k3s_worker]
+server_1 ansible_host=192.168.4.2 ansible_user=glendmaatita_me
 
 [ubuntu]
 server_1
