--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -11,10 +11,18 @@ server_1 ansible_host=192.168.0.1 ansible_user=glendmaatita_me
 k3s_master
 ; k3s_worker
 
+; k3s master, recommended at least 3 nodes
 [k3s_master]
 server_1 ansible_host=192.168.4.1 ansible_user=glendmaatita_me
+; server_2 ansible_host=192.168.4.2 ansible_user=glendmaatita_me
+; server_3 ansible_host=192.168.4.3 ansible_user=glendmaatita_me
 
 [k3s_worker]
+server_1 ansible_host=192.168.5.1 ansible_user=glendmaatita_me
+server_2 ansible_host=192.168.5.2 ansible_user=glendmaatita_me
+server_3 ansible_host=192.168.5.3 ansible_user=glendmaatita_me
+
+[k3s_lb]
 server_1 ansible_host=192.168.4.2 ansible_user=glendmaatita_me
 
 [ubuntu]
