working on erxes

--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -7,8 +7,12 @@ swarm_worker
 [webservers]
 server_1 ansible_host=192.168.0.1 ansible_user=glendmaatita_me
 
+[erxes_server]
+server_1 ansible_host=192.168.0.1 ansible_user=glendmaatita_me
+
 [k3s_nodes:children]
 k3s_master
+; k3s_lb
 ; k3s_worker
 
 ; k3s master, recommended at least 3 nodes
