--- a/ansible/exercise/exercises-roles/roles/erxes/vars/main.yaml
+++ b/ansible/exercise/exercises-roles/roles/erxes/vars/main.yaml
@@ -1,7 +1,8 @@
 ---
 # vars file for erxes
 
-app_path: /app
+app_version: 1.7.0
+app_path: /app/erxes
 nginx_conf_path: /etc/nginx/includes
 public_url: erxes.onxp.net
 author_email: glend@onxp.net
