--- a/ansible/exercise/exercises-roles/erxes.yaml
+++ b/ansible/exercise/exercises-roles/erxes.yaml
@@ -1,6 +1,6 @@
 # ansible-playbook rke.yaml
-- name: Privision RKE Cluster
+- name: Install and configure erxes
   become: yes
-  hosts: k3s_nodes
+  hosts: erxes_server
   roles:
-    - k3s
+    - erxes
