--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -23,17 +23,17 @@ k3s_master
 
 ; k3s master, recommended at least 3 nodes
 [k3s_master]
-server_1 ansible_host=192.168.4.1 ansible_user=glendmaatita_me
+k3s_master_1 ansible_host=192.168.4.1 ansible_user=glendmaatita_me
 ; server_2 ansible_host=192.168.4.2 ansible_user=glendmaatita_me
 ; server_3 ansible_host=192.168.4.3 ansible_user=glendmaatita_me
 
 [k3s_worker]
-server_1 ansible_host=192.168.5.1 ansible_user=glendmaatita_me
-server_2 ansible_host=192.168.5.2 ansible_user=glendmaatita_me
-server_3 ansible_host=192.168.5.3 ansible_user=glendmaatita_me
+k3s_worker_1 ansible_host=192.168.5.1 ansible_user=glendmaatita_me
+; k3s_worker_2 ansible_host=192.168.5.2 ansible_user=glendmaatita_me
+; k3s_worker_3 ansible_host=192.168.5.3 ansible_user=glendmaatita_me
 
 [k3s_lb]
-server_1 ansible_host=192.168.4.2 ansible_user=glendmaatita_me
+k3s_lb_1 ansible_host=192.168.5.6.1 ansible_user=glendmaatita_me
 
 [ubuntu]
 server_1
@@ -114,4 +114,7 @@ ansible_ssh_private_key_file=id_rsa
 ansible_ssh_private_key_file=id_rsa
 
 [rke:vars]
+ansible_ssh_private_key_file=id_rsa
+
+[k3s_nodes:vars]
 ansible_ssh_private_key_file=id_rsa
