--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -8,13 +8,9 @@ swarm_worker
 server_1 ansible_host=192.168.0.1 ansible_user=glendmaatita_me
 
 [erxes_server]
-server_1 ansible_host=192.168.0.1 ansible_user=glendmaatita_me
+; server_1 ansible_host=192.168.0.1 ansible_user=glendmaatita_me
 ; using vagrant
-; erxes_1 ansible_host=127.0.0.1 ansible_user=vagrant ansible_port=2222
-
-[erxes_server:vars]
-ansible_ssh_private_key_file=/home/glend/.vagrant.d/insecure_private_keys/vagrant.key.rsa
-
+erxes_1 ansible_host=127.0.0.1 ansible_user=vagrant ansible_port=2222
 
 [k3s_nodes:children]
 k3s_master
@@ -118,3 +114,7 @@ ansible_ssh_private_key_file=id_rsa
 
 [k3s_nodes:vars]
 ansible_ssh_private_key_file=id_rsa
+
+[erxes_server:vars]
+; if using vagrant
+ansible_ssh_private_key_file=/home/glend/.vagrant.d/insecure_private_keys/vagrant.key.rsa
