working on boundary

--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -89,6 +89,24 @@ consul_server
 nginx_server
 fabio_server
 
+[boundary:children]
+boundary_controller
+boundary_worker
+boundary_lb
+boundary_db
+
+[boundary_controller]
+boundary_controller_1 ansible_host=192.168.8.1 ansible_user=glendmaatita_me
+
+[boundary_worker]
+boundary_worker_1 ansible_host=192.168.8.2 ansible_user=glendmaatita_me
+
+[boundary_lb]
+boundary_lb_1 ansible_host=192.168.8.3 ansible_user=glendmaatita_me
+
+[boundary_db]
+boundary_lb_1 ansible_host=192.168.8.3 ansible_user=glendmaatita_me
+
 [webservers:vars]
 ansible_ssh_private_key_file=./../../../keys/id_rsa
 
@@ -108,4 +126,7 @@ ansible_ssh_private_key_file=id_rsa
 ansible_ssh_private_key_file=id_rsa
 
 [k3s_nodes:vars]
+ansible_ssh_private_key_file=id_rsa
+
+[boundary:vars]
 ansible_ssh_private_key_file=id_rsa
