add boundary ansible

--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -95,17 +95,21 @@ boundary_worker
 boundary_lb
 boundary_db
 
+[boundary_node:children]
+boundary_controller
+boundary_worker
+
 [boundary_controller]
-boundary_controller_1 ansible_host=192.168.8.1 ansible_user=glendmaatita_me
+boundary_controller_1 ansible_host=192.168.7.1 ansible_user=boundary
 
 [boundary_worker]
-boundary_worker_1 ansible_host=192.168.8.2 ansible_user=glendmaatita_me
+boundary_worker_1 ansible_host=192.168.7.2 ansible_user=boundary
 
 [boundary_lb]
-boundary_lb_1 ansible_host=192.168.8.3 ansible_user=glendmaatita_me
+boundary_lb_1 ansible_host=192.168.7.1 ansible_user=boundary
 
 [boundary_db]
-boundary_lb_1 ansible_host=192.168.8.3 ansible_user=glendmaatita_me
+boundary_db_1 ansible_host=192.168.7.1 ansible_user=boundary
 
 [webservers:vars]
 ansible_ssh_private_key_file=./../../../keys/id_rsa
