--- a/ansible/exercise/exercises-roles/roles/boundary/tasks/service.yaml
+++ b/ansible/exercise/exercises-roles/roles/boundary/tasks/service.yaml
@@ -1,8 +1,6 @@
 ---
 - name: Enable Boundary service
-  ansible.builtin.shell:
-    cmd: rcctl enable boundary
-
-- name: Start Boundary service
-  ansible.builtin.shell:
-    cmd: rcctl start boundary
+  ansible.builtin.systemd:
+    name: boundary
+    enabled: yes
+    state: started
