--- a/ansible/exercise/exercises-roles/roles/boundary/tasks/certbot.yaml
+++ b/ansible/exercise/exercises-roles/roles/boundary/tasks/certbot.yaml
@@ -1,48 +1,11 @@
----
-- name: Generate SSL certificate with Certbot
-  ansible.builtin.shell:
-    cmd: certbot certonly --standalone -d {{ publid_domain }} --non-interactive --agree-tos -m {{ author_email }}
-  args:
-    warn: false
-  register: certbot_output
-  changed_when: "'Congratulations' in certbot_output.stdout"
-  delegate_to: "{{ item }}"
-  run_once: true
-  loop: "{{ groups['boundary_controller'][0] }}"
+- name: Install Certbot Nginx
+  apt:
+    update_cache: yes
+    name: ['certbot', 'python3-certbot-nginx']
+    state: present
 
-- name: Fetch certificate from the node
-  ansible.builtin.fetch:
-    src: "/etc/letsencrypt/live/{{ public_domain }}/fullchain.pem"
-    dest: "./certs/{{ inventory_hostname }}/boundary-cert.pem"
-    flat: yes
-  delegate_to: "{{ groups['boundary_controller'][0] }}"
-  run_once: true
+- name: Generate Let's Encrypt certificate
+  command: "certbot --nginx -d {{ public_url }} --email {{ author_email }} --agree-tos --no-eff-email --renew-by-default"
 
-- name: Fetch private key from the node
-  ansible.builtin.fetch:
-    src: "/etc/letsencrypt/live/{{ public_domain }}/privkey.pem"
-    dest: "./certs/{{ inventory_hostname }}/boundary-key.pem"
-    flat: yes
-  delegate_to: "{{ groups['boundary_controller'][0] }}"
-  run_once: true
-
-- name: Ensure the destination directory exists on all controller nodes
-  ansible.builtin.file:
-    path: /etc/boundary.d/tls
-    state: directory
-    mode: '0755'
-  loop: "{{ groups['boundary_controller'] }}"
-
-- name: Distribute certificate to all controller nodes
-  ansible.builtin.copy:
-    src: "./certs/{{ inventory_hostname }}/boundary-cert.pem"
-    dest: "{{ tls_dir }}/boundary-cert.pem"
-    mode: '0644'
-  loop: "{{ groups['boundary_controller'] }}"
-
-- name: Distribute private key to all controller nodes
-  ansible.builtin.copy:
-    src: "./certs/{{ inventory_hostname }}/boundary-key.pem"
-    dest: "{{ tls_dir }}/boundary-key.pem"
-    mode: '0600'
-  loop: "{{ groups['boundary_controller'] }}"
+- name: restart nginx service
+  service: name=nginx state=restarted
