--- a/ansible/exercise/exercises-roles/roles/boundary/tasks/worker.yaml
+++ b/ansible/exercise/exercises-roles/roles/boundary/tasks/worker.yaml
@@ -3,4 +3,11 @@
 - name: Add Worker Config
   template:
     src: worker.hcl.j2
-    dest: /etc/boundary.d/egress-worker.hcl
+    dest: /etc/boundary.d/boundary.hcl
+
+- name: Set Auth storage
+  ansible.builtin.file:
+    path: /var/lib/boundary
+    mode: 0777
+    state: directory
+    
